static/css/abundantlysocial.css
/* ... */
@media (max-width: 767px) {
  .page-section {
    margin: 100px 0px;
  }
  body {
    padding-top: 0px;
  }
  .navbar {
    position: relative;
  }
  .hero_section {
    min-height: auto;
    margin-top: 0px;
    padding-top: 50px;
    padding-bottom: 50px;
    background-image: -webkit-linear-gradient(121deg, rgba(255, 78, 191, .04), rgba(255, 32, 175, .46)), -webkit-linear-gradient(270deg, rgba(87, 161, 255, .67), rgba(87, 161, 255, .67)), url('../images/5Sw5ZtG.png');
    background-image: linear-gradient(329deg, rgba(255, 78, 191, .04), rgba(255, 32, 175, .46)), linear-gradient(180deg, rgba(87, 161, 255, .67), rgba(87, 161, 255, .67)), url('../images/5Sw5ZtG.png');
    background-position: 0px 0px, 0px 0px, 0px 0px;
    background-size: auto, auto, 1720px;
    background-repeat: repeat, repeat, repeat;
    background-attachment: scroll, scroll, fixed;
  }
  .brand {
    margin-left: -8px;
    padding-left: 0px;
  }

  .button {
    font-size: 16px;
  }
  .hero_heading {
    font-size: 36px;
    line-height: 40px;
  }
  .about_page_section {
    padding: 50px 20px;
  }
  .hero_section_other {
    min-height: auto;
    padding-top: 50px;
    padding-bottom: 50px;
    background-image: -webkit-linear-gradient(121deg, rgba(255, 78, 191, .04), rgba(255, 32, 175, .46)), -webkit-linear-gradient(270deg, rgba(87, 161, 255, .67), rgba(87, 161, 255, .67)), url('../images/5Sw5ZtG.png');
    background-image: linear-gradient(329deg, rgba(255, 78, 191, .04), rgba(255, 32, 175, .46)), linear-gradient(180deg, rgba(87, 161, 255, .67), rgba(87, 161, 255, .67)), url('../images/5Sw5ZtG.png');
    background-position: 0px 0px, 0px 0px, 0px 0px;
    background-size: auto, auto, 1720px;
    background-repeat: repeat, repeat, repeat;
    background-attachment: scroll, scroll, fixed;
  }
  .social_icon_link.instagram {
    padding-right: 5px;
    padding-left: 5px;
  }
  .social_icon_link.linkedin {
    padding-right: 5px;
    padding-left: 5px;
  }
  .social_media_container {
    padding-left: 10px;
  }
  .testimonial_slider {
    max-width: 100%;
  }
  .dark_section {
    padding: 50px 0px;
    background: var(--background);
    background-position: 0px 0px, 50% 50%;
  }
  .about_heading {
    font-size: 36px;
    line-height: 40px;
  }
  .container-3 {
    padding-right: 10px;
    padding-bottom: 20px;
    padding-left: 10px;
  }
  .container-3.w-container {
    padding-left: 20px;
    padding-right: 20px;
  }
  .menu-button {
    margin-right: -15px;
    margin-left: 0px;
  }
  .sticky-navbar {
    position: relative;
  }
  .column-9 {
    padding-right: 0px;
    padding-left: 0px;
  }
  .column-10 {
    display: none;
  }
  .column-11 {
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 10px;
  }
  .image-15 {
    display: none;
  }
  .column-12 {
    padding-right: 10px;
  }
  .column-13 {
    padding-left: 10px;
  }
  .pricing_option_2._1 {
    margin-right: 0px;
  }
  .image-17 {
    margin-bottom: 20px;
  }
  .image-18 {
    margin-bottom: 20px;
  }
  .column-15 {
    /* display: none; */
  }
  .form-block {
    padding: 20px;
  }
  .social-sidebar {
    display: none;
  }
  .social-sidebar-pullout {
    display: none;
  }
  .newsletter_popup {
    top: 10%;
    bottom: 10%;
    min-width: auto;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
  .container-div {
    padding-right: 20px;
    padding-left: 20px;
  }
  .container-div.video-content {
    top: -400px;
    margin-bottom: -400px;
  }
  .column-21 {
    padding-left: 10px;
  }
  .column-22 {
    padding-right: 10px;
  }
  /* .page-section {
    padding-top: 50px;
    padding-bottom: 50px;
  } */
  .blog-hero-banner {
    min-height: auto;
    padding: 75px 0px;
  }
  .blog-title {
    font-size: 36px;
    line-height: 40px;
  }
  .blog-subheading {
    font-size: 16px;
    line-height: 26px;
  }
  .author-photo {
    width: 75px;
    height: 75px;
  }
  .div-block-34 {
    top: -160px;
  }
  .author-name {
    font-size: 16px;
    line-height: 26px;
  }
  .blog-date {
    line-height: 24px;
  }
  .blog-text-block {
    margin-top: 75px;
  }
  .blog-breadcrumbs {
    font-size: 16px;
    line-height: 26px;
  }
  .heading-7 {
    font-size: 36px;
    line-height: 46px;
  }
  .heading-7.taxonomy {
    font-size: 20px;
    line-height: 30px;
  }
  .column-left {
    margin-bottom: 30px;
    padding-right: 10px;
  }
  .column-right {
    padding-left: 10px;
  }
  .heading-7-copy2 {
    font-size: 36px;
    line-height: 46px;
  }
  .blog-grid-title {
    font-size: 30px;
    line-height: 40px;
  }
  .heading-9 {
    font-size: 26px;
    line-height: 36px;
  }
  .video-item {
    width: 50%;
  }
  .video-item-title {
    font-size: 20px;
  }
  .video-hero-section {
    min-height: 500px;
  }
  .html-embed-2 {
    min-height: 300px;
  }
  .button-smaller {
    font-size: 16px;
  }
  .column.center {
    margin-top: 10px;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    text-align: center;
  }
  .div-block-46 {
    margin-top: 30px;
  }
}
/* ... */

